--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "firebase": "^8.3.2",
+    "gh-pages": "^3.1.0",
     "immer": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -14,13 +15,16 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "use-immer": "^0.5.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "http-proxy-middleware": "^1.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +43,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://cororo10.github.io/"
 }
