homepage url 변경

--- a/package.json
+++ b/package.json
@@ -45,5 +45,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://cororo10.github.io/react_chat/"
+  "homepage": "https://cororo10.github.io/react-chat/"
 }
